osdc/Objecter: debug pause/unpause transition

My only theory for https://tracker.ceph.com/issues/43813 is that
t->paused got set somehow, but I can't see how.  Add some debug output
when this happens (it should be pretty rare).

Signed-off-by: Sage Weil <sage@redhat.com>